commited the code changed for get Singe detils of User in UserService